# movies_data

./: .gitignore  README.md  pyproject.toml
data/: download_data.py
src/: main.py  movie_data_processor.py
tests/: test_processor.py
