[tool.poetry]
name = "movies-analysis"
version = "0.1.0"
description = "A tool for analyzing movie datasets."
authors = ["Ivan Minev  ivan.minev55@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
